fix: fix style in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,6 +95,7 @@
                 right: 5px;
                 top: 8px;
                 opacity: 0;
+                color:#dddddd;
                 transform: scaleY(0.7);
                 transition: all .25s ease;
             }
